# natural_rag

./: .env.wikontic.example  .gitignore  Baseline.ipynb  README.md  main.py  pyproject.toml  pyrightconfig.json
datasets/2wikimultihopqa/: 2wikimultihopqa.json
datasets/bioasq/: corpus.jsonl  questions.jsonl
datasets/bl/: corpus_info.yaml  questions.yaml  questions2.yaml
datasets/bl/docs/: Advancements.md  Alembic.md  Algae.md  Alpha 3.0.0.md  Alpha 3.1.0.md  Alpha 3.2.0.md  Alpha 3.2.1.md  Amate Map.md  Amate Name Tag.md  Amate Paper Pane.md  Amate Paper.md  Amulet Slot.md  Amulet Socket.md  Amulet.md  Anadia Parts.md  Ancient Armor.md  Ancient Battle Axe.md  Ancient Greatsword.md  Ancient Remnant Block.md  Ancient Remnant.md  Ancient Temple.md  Angler Tooth Arrow.md  Angler Tooth.md  Angler.md  Angry Betweenstone.md  Animating.md  Arrow (disambiguation).md  Arrow Arum.md  Ash Sprite.md  Aspect Vials.md  Aspectrus Fruit.md  Aspectrus Seeds.md  Auroras.md  Baked Olm Egg Cluster.md  Ball of Sap.md  Barnacle Flesh.md  Barnacle Larvae.md  Barrels.md  Basilisk Arrow.md  Bauble.md  (+639 more)
datasets/bl/sources/: Advancements.html  Alembic.html  Algae.html  AllPages_0.html  AllPages_1.html  AllPages_2.html  AllPages_3.html  AllPages_4.html  AllPages_6.html  Alpha 3.0.0.html  Alpha 3.1.0.html  Alpha 3.2.0.html  Alpha 3.2.1.html  Amate Map.html  Amate Name Tag.html  Amate Paper Pane.html  Amate Paper.html  Amphibious Armor.html  Amulet Slot.html  Amulet Socket.html  Amulet.html  Anadia Parts.html  Anadia.html  Ancient Armor.html  Ancient Battle Axe.html  Ancient Greatsword.html  Ancient Remnant Block.html  Ancient Remnant.html  Ancient Temple.html  Angler Tooth Arrow.html  Angler Tooth.html  Angler.html  Angry Betweenstone.html  Animating.html  Animator.html  Armor of Legends.html  Arrow (disambiguation).html  Arrow Arum.html  Ash Sprite.html  Aspect Vials.html  (+654 more)
datasets/bl_medium/: corpus_info.yaml  questions.yaml
datasets/bl_medium/docs/: AllPages_5.md  Amphibious Armor.md  Anadia.md  Angry Pebble.md  Animator.md  Armor of Legends.md  Aspects.md  Bark Amulet.md  Barrishee.md  Beta 2.0.3.md  Beta 3.5.0.md  Bone Armor.md  Cave Grass.md  Chiseled Temple Brick.md  Copper Iris.md  Crab Claw.md  Critter Cruncher.md  Cryptweed.md  Dentrothysts.md  Drinkable Brews.md  Dry Bark.md  Dungeon Door.md  Dyes.md  (+37 more)
datasets/bl_small/: questions.yaml
datasets/bl_tiny/: corpus_info.yaml  questions.yaml
datasets/financebench/: corpus.jsonl  questions.jsonl
datasets/hotpotqa/: corpus.jsonl  questions.jsonl
datasets/hotpotqa_500/: corpus.jsonl  questions.jsonl
datasets/musique/: corpus.jsonl  questions.jsonl
legacy/: bl_orig_questions.yaml
natural_rag/: baseline.py  dashboard.py  data.py  dataset.py
natural_rag/baseline/: baseline.py  baseline_main.py  build.py  prompts.py  routines.py  struct.py  tree.py  utils.py  vector_index.py
natural_rag/pipelines/: __init__.py  fast_graphrag_pipelines.py  hipporag_pipelines.py  lightrag_pipelines.py  nano_graphrag_pipelines.py  ragu_pipelines.py  wikontic_pipeline.py
notebooks/: BL prepare corpus.ipynb  Get medium version.ipynb
runs/: README.md  baseline_run.py  chegeka_evaluate.py  fast_graphrag_run.py  jsonl_llm_judge_evaluate.py  lightrag_run.py  multi_q_evaluate.py  nano_graphrag_run.py  ragu_2wiki_run.py  ragu_dash.py  ragu_evaluate.py  ragu_run.py  run_custom_ragu.py  run_hippo.py  run_lightrag_bioasq.py  test_all.py  wikontic_run.py
scripts/: setup_wikontic_ontology.py
(+65 files in other folders)
